[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keras_callbacks"
version = "0.1.1"
description = "A set of new callbacks for Keras"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["machine learning", "neural network"]
dependencies = [
    "tensorflow",
    "numpy",
    "gtts",
    "ipython"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/keras_callbacks/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/keras_callbacks/tree/main/doc"
"Source" = "https://github.com/trucomanx/keras_callbacks"


[tool.setuptools]
packages = ["keras_callbacks", "keras_callbacks.modules"]
